<resources>
    <string name="client_app_name">应用市场</string>
    <string name="str_loading">正在加载，请稍候…</string>
    <string name="setting_network">设置网络</string>
    <string name="no_available_network">网络未连接，请点击重试</string>
    <string name="hms_abort">终止</string>
    <string name="hms_abort_message">是否终止下载？</string>
    <string name="hms_cancel">取消</string>
    <string name="hms_check_failure">检查华为移动服务更新失败。</string>
    <string name="hms_check_no_update">华为移动服务已经是最新版本</string>
    <string name="hms_checking">正在检查华为移动服务更新，请稍候...</string>
    <string name="hms_confirm">知道了</string>
    <string name="hms_download_failure">下载华为移动服务安装包失败。</string>
    <string name="hms_download_no_space">剩余空间不足，无法下载。</string>
    <string name="hms_download_retry">下载华为移动服务失败。是否重试？</string>
    <string name="hms_downloading">正在下载华为移动服务 | 已完成：%d%%</string>
    <string name="hms_install">安装</string>
    <string name="hms_install_message">您尚未安装华为移动服务，安装之后才可用此功能。是否安装？</string>
    <string name="hms_retry">重试</string>
    <string name="hms_update">更新</string>
    <string name="hms_update_message">华为移动服务版本太旧，更新到最新版本才可用此功能。是否更新？</string>
    <string name="hms_update_title">华为移动服务</string>
    <string name="hsf_abort">终止</string>
    <string name="hsf_abort_message">是否终止下载？</string>
    <string name="hsf_cancel">取消</string>
    <string name="hsf_check_failure">检查华为服务框架更新失败。</string>
    <string name="hsf_check_no_need_update">华为服务框架不需要更新</string>
    <string name="hsf_check_no_update">华为服务框架已经是最新版本</string>
    <string name="hsf_checking">正在检查华为服务框架更新，请稍候...</string>
    <string name="hsf_confirm">知道了</string>
    <string name="hsf_download_failure">下载华为服务框架安装包失败。</string>
    <string name="hsf_download_no_space">剩余空间不足，无法下载。</string>
    <string name="hsf_download_retry">下载华为服务框架失败。是否重试？</string>
    <string name="hsf_downloading">正在下载华为服务框架 | 已完成：%d%%</string>
    <string name="hsf_install">安装</string>
    <string name="hsf_install_failure">安装华为服务框架失败。</string>
    <string name="hsf_install_message">尚未安装华为服务框架，安装后才可用此功能。是否安装？</string>
    <string name="hsf_retry">重试</string>
    <string name="hsf_update">更新</string>
    <string name="hsf_update_message">华为服务框架版本太旧，更新到最新版本才可用此功能。是否更新？</string>
    <string name="hsf_update_title">华为服务框架</string>
    <string name="CS_ERR_for_cannot_conn_service">无法连接服务器，请稍后重试。</string>
    <string name="CS_ERR_for_unable_get_data">无法获取数据，请稍后重试。</string>
    <string name="CS_area_not_support_service">您所在的地区暂未开通此项服务。</string>
    <string name="CS_back">上一步</string>
    <string name="CS_bind_devices_excess">该帐户最多只能绑定 5 个设备，请登录 %s 至少移除一个设备后，重新登录。</string>
    <string name="CS_download_failed_notes">下载失败。是否重试？</string>
    <string name="CS_download_no_space">手机剩余空间不足，无法下载</string>
    <string name="CS_downloading">正在下载 | 已完成：%d%%</string>
    <string name="CS_downloading_new">%s%%</string>
    <string name="CS_downloading_now_new">正在下载...</string>
    <string name="CS_email_already_verified">安全邮件地址已激活</string>
    <string name="CS_go_settings">前往设置</string>
    <string name="CS_install">安装</string>
    <string name="CS_install_hwid">安装华为帐号</string>
    <string name="CS_logout_apps">以下应用将退出当前帐号：</string>
    <string name="CS_network_connect_error">"网络未连接，请检查网络设置。 "</string>
    <string name="CS_next">下一步</string>
    <string name="CS_no_network_content">网络服务器不可用，请检查网络连接</string>
    <string name="CS_overload_message">请求太频繁，请稍后重试</string>
    <string name="CS_permission_warning_tip">开启如下权限后才能使用所需功能，是否现在设置？</string>
    <string name="CS_read_phone_state_permission">电话</string>
    <string name="CS_retry">重试</string>
    <string name="CS_server_unavailable_title">连接失败</string>
    <string name="CS_sim_card_unavailable">SIM 卡无法使用。</string>
    <string name="CS_system_error_tip">系统错误，请重新登录</string>
    <string name="CS_terminate">终止</string>
    <string name="CS_title_tips">提示</string>
    <string name="CS_update">更新</string>
    <string name="CS_update_hwid">更新华为帐号</string>
    <string name="CS_update_notes">您尚未安装“华为帐号”完整版，安装之后才可用此功能，并保证帐号安全。仅需安装一次，是否立即安装？</string>
    <string name="CS_update_old_hwid_notes">您的 “华为帐号”版本太旧，更新版本才可使用。是否更新？</string>
    <string name="CS_update_stop">终止下载？</string>
    <string name="CS_waiting_progress_message">请稍候...</string>
    <string name="CS_webview_copy_link">复制链接</string>
    <string name="CS_webview_goback">返回</string>
    <string name="CS_webview_open_in_browser">在浏览器中打开</string>
    <string name="CS_webview_toast_copy_done">已复制到剪贴板</string>
    <string name="about">关于</string>
    <string name="about_copyright">版权所有 © 2010-2017 华为软件技术有限公司保留一切权利</string>
    <string name="about_developerContent">developer.huawei.com</string>
    <string name="about_developercenter_portal">华为开发者联盟</string>
    <string name="about_fans_qq_group">QQ 粉丝群</string>
    <string name="about_fans_qq_group_number">207604841</string>
    <string name="about_gamebox_portal">华为游戏中心官网</string>
    <string name="about_gamebox_website">game.vmall.com</string>
    <string name="about_gamebox_weixinName">huawei-game</string>
    <string name="about_hispacecenter_portal_new">官网</string>
    <string name="about_kefumm">QQ 客服</string>
    <string name="about_kefumm_QQ">QQ 4008308300</string>
    <string name="about_safe">中国反网络病毒联盟应用商店自律组</string>
    <string name="about_shareappcenter">分享我们</string>
    <string name="about_websiteContent">appstore.huawei.com</string>
    <string name="about_weibo_name">\@百篮应用市场</string>
    <string name="about_weixinName">hiapps</string>
    <string name="about_weixin_account">微信公众号</string>
    <string name="about_xinweibo_account">新浪微博</string>
    <string name="account_auth_failed">帐号验证失败，请重新登录</string>
    <string name="account_cancel">取消</string>
    <string name="account_logout">退出帐号</string>
    <string name="account_manager">管理帐号</string>
    <string name="action_settings">设置</string>
    <string name="address_already_setting">已设置</string>
    <string name="after_login">登录显示</string>
    <string name="alert_title">温馨提示</string>
    <string name="alert_title_exit">退出应用市场</string>
    <string name="all_time">始终</string>
    <string name="already_connected_pc">已连接 %s 的电脑</string>
    <string name="already_connected_pc_no_name">已连接到电脑</string>
    <string name="already_upload_log">您已上报问题信息</string>
    <string name="apk_cannot_install">安装包无法安装</string>
    <string name="apk_management">安装包管理</string>
    <string name="apk_manager_nopermission_content">安装包扫描需获取“存储”权限，用于扫描和删除存储中的安装包。</string>
    <string name="apkmanage_clean_title">是否删除 %1$s 的安装包？</string>
    <string name="apkmanage_delete_all">是否删除全部安装包？</string>
    <string name="apkmanage_deleteall">全部删除</string>
    <string name="apkmanage_deleteapk">删除</string>
    <string name="apkmanage_file_not_exist">文件不存在。</string>
    <string name="apkmanage_no_apks">没有安装包</string>
    <string name="apkmanage_refresh">刷新</string>
    <string name="apkmanage_size_desc">已用 %1$s | 剩余 %2$s</string>
    <string name="apkmanage_tips_modify">可删除安装包</string>
    <string name="app_award_download_content">只有登录才能参与此活动哦</string>
    <string name="app_award_download_login">登录参与</string>
    <string name="app_award_download_nologin_ex">直接安装</string>
    <string name="app_award_download_title">有奖活动</string>
    <string name="app_cant_open">%1$s不支持打开操作，请先查阅该应用的使用说明噢</string>
    <string name="app_download_alert_cancel">知道了</string>
    <string name="app_download_alert_confrim_ex">继续安装</string>
    <string name="app_download_alert_content_ex">网络切换为数据流量，暂停安装可免流量消耗。</string>
    <string name="app_download_alert_title_ex">%1$s 个安装已暂停</string>
    <string name="app_download_in_https_ex">安全安装</string>
    <string name="app_download_retry_content_ex1">因网络原因，%1$s的安装文件在下载过程中出现异常，请重新下载安装 (%2$s)。</string>
    <string name="app_download_retry_title">重新下载</string>
    <string name="app_download_retry_title_ex">重新下载安装</string>
    <string name="app_downloaded_apk_error_ex">安装包损坏，点击重新安装</string>
    <string name="app_downloadfailed_ex">安装失败</string>
    <string name="app_downloadfailed_not_enough_ex">空间不足，安装失败</string>
    <string name="app_downloadresume">继续</string>
    <string name="app_downloadwait">等待中</string>
    <string name="app_info_default">正在获取…</string>
    <string name="app_install_tamper_notice_content">%1$s的安装包可能已被篡改或替换，安装时未能通过百篮应用市场的安全检测，请重新下载并安装。</string>
    <string name="app_install_tamper_notice_title">安全风险提示</string>
    <string name="app_installing_can_not_delete">应用正在安装，请稍后操作</string>
    <string name="app_is_stopped">该应用已停用</string>
    <string name="app_management">应用管理</string>
    <string name="app_name">百篮应用</string>
    <string name="app_reinstall">重新安装</string>
    <string name="app_syn_first_time_start_toast">已启动已购项目同步安装</string>
    <string name="app_uninstall">卸载</string>
    <string name="appdetail_screenshot">应用截图</string>
    <string name="appinstall_btn_select">已选择</string>
    <string name="appinstall_btn_selectall">全选</string>
    <string name="appinstall_btn_uninstall">卸载</string>
    <string name="appinstall_btn_uninstallall">批量卸载</string>
    <string name="appinstall_btn_unselectall">取消全选</string>
    <string name="appinstall_currentuser">当前帐号下的</string>
    <string name="appinstall_uninstall_app">是否卸载%1$s？</string>
    <string name="appinstall_uninstall_app_batch">是否卸载%1$s等%2$s个应用？</string>
    <string name="appinstall_uninstall_app_btn">卸载</string>
    <string name="appinstall_uninstall_app_mainuser">是否卸载%2$s%1$s？</string>
    <string name="appinstall_uninstall_app_selectapp">请选择要卸载的应用</string>
    <string name="appinstall_uninstall_app_uninstalling">正在卸载</string>
    <string name="appinstall_uninstall_app_waitinguninstall">等待卸载</string>
    <string name="appmove_cannotmove_title">不可移动</string>
    <string name="appmove_cannt_move">您的手机暂不支持应用搬家！</string>
    <string name="appmove_cannt_move_SD">SD 卡太满装不下啦，去清理一下吧</string>
    <string name="appmove_cannt_move_phone">手机太满装不下啦，去清理一下吧</string>
    <string name="appmove_moveapp_tosd_quickly">在内存与SD卡之间转移应用</string>
    <string name="appmove_nosd1">"您的应用无需搬家，
手机的数据存储与内部存储共用"</string>
    <string name="appmove_title">应用搬家</string>
    <string name="appmove_tophone_title">可移至手机</string>
    <string name="appmove_tosd_title">可移至 SD 卡</string>
    <string name="appmove_versionlow1">"您的手机不支持搬家，
安卓固件版本低于3.0"</string>
    <string name="appzone_comment_count">评论 (%1$s 条)</string>
    <string name="appzone_comments">评论</string>
    <string name="appzone_may_cannot_fit_phone">在本机运行效果可能不佳</string>
    <string name="appzone_trace_delete_dialog_content">是否删除 %1$s 条已购项目数据？</string>
    <string name="appzone_trace_delete_dialog_title">删除提示</string>
    <string name="appzone_trace_delete_failed">已购项目删除失败，请重试</string>
    <string name="appzone_trace_delete_loading_msg">联网删除中，请稍候</string>
    <string name="appzone_trace_half_month">半月前</string>
    <string name="appzone_trace_half_year">半年前</string>
    <string name="appzone_trace_has_not_select_pkgs">请先选择可删除已购项目</string>
    <string name="appzone_trace_one_day">1 天前</string>
    <string name="appzone_trace_one_month">1 月前</string>
    <string name="appzone_trace_one_weak">1周前</string>
    <string name="appzone_trace_three_day">3 天前</string>
    <string name="appzone_trace_threee_month">3 月前</string>
    <string name="appzone_trace_today">今天</string>
    <string name="auto_update_dialog_button">知道了</string>
    <string name="detail_cancel_text">取消</string>
    <string name="detail_comment_text">评论</string>
    <string name="detail_intro_report">举报</string>
    <string name="detail_new_date">时间</string>
    <string name="detail_new_developer">开发</string>
    <string name="detail_new_size">大小</string>
    <string name="detail_new_tariff">资费</string>
    <string name="detail_new_version">版本</string>
    <string name="detail_share_text">分享</string>
    <string name="mine_loading">正在加载…</string>
    <string name="update_manager_subtitle_version_new">保持版本最新，抢先体验最新功能</string>
    <string name="update_manager_title">更新管理</string>
    <string name="update_more">更多更新</string>
</resources>