<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/detail_appinfo_report_layout_linearlayout"
        android:layout_width="wrap_content"
        android:layout_height="26.0dip"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16.0dip"
        android:background="@drawable/emui_button_select"
        android:gravity="center"
        android:minWidth="60.0dip"
        android:orientation="horizontal"
        android:paddingLeft="12.0dip"
        android:paddingRight="12.0dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/detail_intro_report"
            android:textAllCaps="true"
            android:textColor="@color/blue_text_007dff"
            android:textSize="@dimen/res_textsize_12dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.0dip"
        android:gravity="right"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tariff_unit_textview"
            style="@style/detail_appinfo_alpha_30_13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_new_tariff" />

        <TextView
            android:id="@+id/size_unit_textview"
            style="@style/detail_appinfo_alpha_30_13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_new_size" />

        <TextView
            android:id="@+id/version_unit_textview"
            style="@style/detail_appinfo_alpha_30_13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_new_version" />

        <TextView
            android:id="@+id/release_unit_textview"
            style="@style/detail_appinfo_alpha_30_13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_new_date" />

        <TextView
            android:id="@+id/develop_unit_textview"
            style="@style/detail_appinfo_alpha_30_13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_new_developer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8.0dip"
        android:layout_marginRight="16.0dip"
        android:layout_toRightOf="@id/item_layout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detail_appinfo_tariff_textview"
            style="@style/detail_appinfo_alpha_50_13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detail_appinfo_size_textview"
            style="@style/detail_appinfo_alpha_50_13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detail_appinfo_version_textview"
            style="@style/detail_appinfo_alpha_50_13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detail_appinfo_release_date_textview"
            style="@style/detail_appinfo_alpha_50_13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/appdetail_appinfo_developer_textview"
            style="@style/detail_appinfo_alpha_50_13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>