<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/manage_scroll_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgound_fcfcfc">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/margin_top_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/update_card_manager_main_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/update_manager_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_item_normal_selector"
                android:paddingBottom="9.0dip"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip"
                android:paddingTop="9.0dip">

                <ImageView
                    android:id="@+id/update_arrow_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="4.0dip"
                    android:src="@drawable/ic_public_arrow_right" />

                <LinearLayout
                    android:id="@+id/update_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/update_label_textview"
                        style="@style/item_title_true_15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_gravity="center_vertical"
                        android:text="@string/update_manager_title" />

                    <TextView
                        android:id="@+id/update_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="2.0dip"
                        android:color="@color/black"
                        android:text="@string/mine_loading"
                        android:textSize="@dimen/textsize_comment_user"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/item_red_point_update"
                        android:layout_width="6.0dip"
                        android:layout_height="6.0dip"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="2.0dip"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:src="@drawable/bg_manage_red_dot"
                        android:textColor="@color/white"
                        android:visibility="gone" />
                </LinearLayout>

                <TextView
                    android:id="@+id/update_label_subtitle"
                    style="@style/content_style_13sp_50alpha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/update_layout"
                    android:text="@string/update_manager_subtitle_version_new"
                    android:textSize="@dimen/dialog_content" />
            </RelativeLayout>

            <!--<include
                android:id="@id/update_card_layout1"
                layout="@layout/update_record_item"
                android:visibility="gone" />

            <include
                android:id="@id/update_card_layout2"
                layout="@layout/update_record_item"
                android:visibility="gone" />

            <include
                android:id="@id/update_card_layout3"
                layout="@layout/update_record_item"
                android:visibility="gone" />-->

            <LinearLayout
                android:id="@+id/more_update_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone">

                <TextView
                    android:id="@+id/more_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="14.0dip"
                    android:layout_marginLeft="16.0dip"
                    android:layout_marginRight="16.0dip"
                    android:layout_marginTop="14.0dip"
                    android:text="@string/update_more"
                    android:textAllCaps="true"
                    android:textColor="@drawable/textbutton_font_style"
                    android:textSize="@dimen/res_textsize_13sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="8.0dip"
            android:background="@color/black_alpha_03" />

        <LinearLayout
            android:id="@+id/settings_manager_main_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.ggxiaozhi.store.the_basket.view.widget.EnterLayout
                android:id="@+id/install_manager_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_item_normal_selector" />

            <com.example.ggxiaozhi.store.the_basket.view.widget.EnterLayout
                android:id="@+id/apk_manager_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_item_normal_selector" />

            <com.example.ggxiaozhi.store.the_basket.view.widget.EnterLayout
                android:id="@+id/system_manager_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_item_normal_selector" />


            <com.example.ggxiaozhi.store.the_basket.view.widget.EnterLayout
                android:id="@+id/connect_computer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_item_normal_selector" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="8.0dip"
            android:background="@color/backgound_fcfcfc" />
    </LinearLayout>
</ScrollView>